<resources>
    <string name="app_name">Gestor Stock</string>
    <string name="main_screen_title">Gestor de Stock</string>
    <string name="main_screen_subtitle">La mejor opcion para gestionar tu comercio</string>
    <string name="main_screen_login_button">Ingresar</string>
    <string name="main_screen_signup_button">Registrarse</string>
    <string name="login_activity_label">Ingresar</string>
    <string name="login_email_field">Correo</string>
    <string name="login_password_field">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="sign_up_activity_label">Registrarse</string>
    <string name="sign_up_name_field">Nombre</string>
    <string name="sign_up_password_field">Contraseña</string>
    <string name="sign_up_email_field">Correo</string>
    <string name="sign_up_confirm_password_field">Confirmar contraseña</string>
    <string name="sign_up_button">Registrarse</string>
    <string name="dialog_signout_title">¿Desea cerrar sesion?</string>
    <string name="dialog_signout_positive_button">Cerrar sesion</string>
    <string name="dialog_signout_negative_button">Cancelar</string>
    <string name="home_activity_label">Dashboard</string>
    <string name="product_form_add_product_title">Añadir producto</string>
    <string name="product_form_edit_product_title">Editar producto</string>
    <string name="product_form_cancel_buton">Cancelar</string>
    <string name="product_form_accept_button">Aceptar</string>
    <string name="product_form_stock_field">Stock actual</string>
    <string name="product_form_price_field">Precio</string>
    <string name="product_form_name_field">Nombre</string>
</resources>